<resources>
    <string name="app_name">Bauway</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="plz_input_phone">Please Input Phone number</string>
    <string name="plz_input_yzm">Please input verification code</string>
    <string name="plz_input_email">Please input email address</string>
    <string name="plz_input_pwd">Please input password</string>
    <string name="plz_input_oldpwd">please input old password</string>
    <string name="plz_input_newpwd">Please input new password</string>
    <string name="plz_error_oldpwd">Old password input error</string>
    <string name="login_now">Login in now…</string>
    <string name="confirm">Confirm</string>
    <string name="input_pwd">Password(6-12 letters and numbers combination)</string>
    <string name="input_new_pwd">New password(6-12 letters and numbers combination)</string>
    <string name="confirm_pwd">Confirm password</string>
    <string name="register_success_plz_check_phone">Register success</string>
    <string name="phone_already_register">Phone already registered</string>
    <string name="and" translatable="false"><![CDATA[&]]></string>
    <string name="pwd_again">Confirm new password</string>
    <string name="pwd_new">New password</string>
    <string name="pwd_old">Old password</string>
    <string name="username_reset">The account that need to reset password </string>
    <string name="pwd_reset">Rest password</string>
    <string name="receive_code">verification code you received</string>
    <string name="reset_password_now">password reset</string>
    <string name="reset_success_password">password reset success</string>
    <string name="reset_failure">password reset failed </string>
    <string name="change_password_now">changing password</string>
    <string name="change_success_password">change password success</string>
    <string name="change_failure">change password failed </string>
    <string name="find_bluetooth">find buletooth</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="pwd">password</string>
    <string name="error_bluetooth_not_supported">error_bluetooth_not_supported</string>
    <string name="unknown_device">Unknown device</string>
    <string name="code_is_send_error_plz_try">Verification code request failed, please retry</string>
    <string name="second"> second</string>
    <string name="code_is_send_plz_check">verification code has been sent, please kindly check，</string>
    <string name="organization_name1">Company name</string>
    <string name="legal_representative1">Legal representative</string>
    <string name="personinfo_head1"> Person in charge</string>
    <string name="registration_mark1">Business license No</string>
    <string name="address1">Address</string>
    <string name="organization_name">Company name:</string>
    <string name="legal_representative">Legal representative :</string>
    <string name="personinfo_head">Person in Charge:</string>
    <string name="registration_mark">Business License No:</string>
    <string name="address">Address:</string>
    <string name="plz_input_organization_name">Please input Company name</string>
    <string name="plz_input_legal_representative">Please Input Legal representative</string>
    <string name="plz_input_personinfo_head">Please input Person in Charge</string>
    <string name="plz_input_registration_mark">Please input Business license No</string>
    <string name="plz_input_address">Please input address</string>
    <string name="change_pwd">Change password</string>
    <string name="change">Change</string>
    <string name="person_name">Name</string>
    <string name="person_sex">Sex</string>
    <string name="person_age">Age</string>
    <string name="person_height">Height</string>
    <string name="person_weight">Weight</string>
    <string name="plz_input_person_name">Name</string>
    <string name="plz_input_person_sex">Sex</string>
    <string name="plz_input_person_age">Age</string>
    <string name="plz_input_person_height">Height</string>
    <string name="plz_input_person_weight">Weight</string>
    <string name="album">Album</string>
    <string name="scan_result">Scan result</string>
    <string name="copy">Copy</string>
    <string name="text_already_copied">Already copied to Clipboard</string>
    <string name="bar_code">Bar code：%1$s</string>
    <string name="decode_null">QR code/ bar code not found</string>
    <string name="Alignment_code">Alignment QC code/bar code </string>
    <string name="scan_code_open">Scan medicine code, start to use </string>
    <string name="manual_input_code">Or input medicine code</string>
    <string name="camera_error">Camera error</string>
    <string name="scan_code">Scan code</string>
    <string name="generate_code"> Generate code</string>
    <string name="prompt">Reminder</string>
    <string name="generate_qr_code">generate QR code</string>
    <string name="select_logo">Select from Album Logo</string>
    <string name="save_qr_code">Save QR code to phone </string>
    <string name="input_qr_code_content">Input information from QR code </string>
    <string name="logo">Logo</string>
    <string name="generate_qrcode_please">Still haven’t generate RQ photo </string>
    <string name="picture_already_save_to">Picture already had been saved to 1$s</string>
    <string name="save_fail_retry">Save failed ,please retry</string>
    <string name="logo_open_status">While opening status,QR code picture showed in the middle area Logo</string>
    <string name="qrcode_fore_color">QR code front view</string>
    <string name="qrcode_back_color">QR code background view</string>
    <string name="local_album">Local Album</string>
    <string name="picture_name_number">%1$s(%2$d张)</string>
    <string name="scanning">preparing album…</string>
    <string name="identifying">identifying…</string>
    <string name="no_local_album">No local album</string>
    <string name="capture">take photos</string>
    <string name="recent"> recent</string>
    <string name="camera">Camera</string>
    <string name="screen_short">screen capture </string>
    <string name="we_chat"> We chat</string>
    <string name="download">Download</string>
    <string name="picture">picture</string>
    <string name="no_crop_action"> your device haven’t provided cut pictures function </string>
    <string name="no_browser">Your device haven’t provided built-in browser </string>
    <string name="play_fail">play fail </string>
    <string name="version">1.1.3</string>
    <string name="loading">loading …</string>
    <string name="telphone">telephone number</string>
    <string name="forget_pwd">forget password</string>
    <string name="login">log in</string>
    <string name="register">register</string>
    <string name="grregister">personal register</string>
    <string name="jgregister">company register</string>
    <string name="text_agreement_tips">I already red and acceptd BAUWAY</string>
    <string name="text_agreement"> 《Terms of sevice》 </string>
    <string name="text_user_agreement"> terms of sevice </string>
    <string name="just_now">just now</string>
    <string name="sec_before">%d second before</string>
    <string name="min_before">%d minutes before</string>
    <string name="today">today%tR</string>
    <string name="yesterday">yesterday %tR</string>
    <string name="mill" translatable="false">%tc</string>
    <string name="company_news">Company news</string>
    <string name="industry_dynamics">Industry dynamics</string>
    <string name="tab_menu_pro0">Heat not burn</string>
    <string name="tab_menu_pro1">EGO</string>
    <string name="tab_menu_pro2">dry herb vaporizer</string>
    <string name="tab_menu_pro3">Box mod</string>
    <string name="tab_menu_pro4">Mini cigarette</string>
    <string name="tab_menu_pro5">E liquid and spare parts</string>
    <string name="toast_yzm_1">Verification code is empty, please refill verification code</string>
    <string name="toast_yzm_2">Network connection exception </string>
    <string name="view_device_index">Check device index</string>
    <string name="set_device_index">Set device index</string>
    <string name="unbind_device">Unbind device</string>
    <string name="plz_input_pwd_again">Input password again</string>
    <string name="pwd_input_diff">The two passwords you typed do not match</string>
    <string name="no_set">no set</string>
    <string name="cancel">Cancel</string>
    <string name="email_already_register">Email already had been registered</string>
    <string name="register_failure">Register failed</string>
    <string name="register_success_plz_check_email">register successful, please check email</string>
    <string name="register_now">registering …</string>
    <string name="email_pwd_input_err">email／password error</string>
    <string name="email_need_check"> email unverified, please validate email address to log in. </string>
    <string name="reset_password">reset password</string>
    <string name="send_reset_pwd_info">sending reset request …</string>
    <string name="already_send_reset_email">already sent validate email to your email address, operate according email reminder</string>
    <string name="email_address_err">validate email information error</string>
    <string name="search">search</string>
    <string name="concern_us">Follow us </string>
    <string name="count_number">Puffs</string>
    <string name="notes">Notes</string>
    <string name="notification">Remind</string>
    <string name="evaluate">Evaluate</string>
    <string name="set">set</string>
    <string name="common_set">general index</string>
    <string name="product_select">Product select</string>
    <string name="product_show">Product display</string>
    <string name="news">News</string>
    <string name="sales">Sales</string>
    <string name="news_list">News list</string>
    <string name="news_detail">News details</string>
    <string name="video_play">Video play</string>
    <string name="product_list">Product list</string>
    <string name="bbs">Forum</string>
    <string name="function">Function</string>
    <string name="Scan">Scan</string>
    <string name="video">Video</string>
    <string name="video_manager">Video manage</string>
    <string name="v" translatable="false">V</string>
    <string name="t" translatable="false">T</string>
    <string name="h" translatable="false">H</string>
    <string name="temp_unit" translatable="false">℃</string>
    <string name="p" translatable="false">P</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="shake">Vibration</string>
    <string name="user_use_number">Puffs</string>
    <string name="temp">Temperature</string>
    <string name="power_time">Charge time</string>
    <string name="power_count">Charge times</string>
    <string name="dcv">Voltage</string>
    <string name="ota">Update</string>
    <string name="app_user_info">Account information</string>
    <string name="plz_input_new_pwd_again">Please input new password again</string>
    <string name="plz_input_new_pwd">Please input new password</string>
    <string name="plz_input_old_pwd">Please input old password </string>
    <string name="change_pwd_success">Change password success</string>
    <string name="change_pwd_failure">Change password failed</string>
    <string name="change_pwd_now">Changing password…</string>
    <string name="vibration">Vibration</string>
    <string name="work_time_set">Single cycle working time</string>
    <string name="temp_set">Temperature setting</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="product_model">Model：</string>
    <string name="product_flavor">Flavor：</string>
    <string name="product_capacity">Capacity：</string>
</resources>