<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_divider_line"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:background="@color/blue_ice"
        android:padding="10dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/product_show"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.bauwayhome.ec.View.PicsView
        android:id="@+id/picsviewpager"
        android:layout_width="match_parent"
        android:layout_height="200dp"></com.bauwayhome.ec.View.PicsView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:layout_marginTop="@dimen/dp5"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:scrollbars="none">

                <RadioGroup
                    android:id="@+id/rg_tab_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_circle_huise"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_pro0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg1"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro0"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_pro1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg2"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro2"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_pro2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg2"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro3"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_pro3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg2"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro4"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_pro4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg2"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro1"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/rb_pro5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/tab_menu_bg3"
                        android:button="@null"
                        android:padding="12dp"
                        android:text="@string/tab_menu_pro5"
                        android:textColor="@drawable/tab_menu_text"
                        android:textSize="14sp" />

                </RadioGroup>
            </HorizontalScrollView>

            <!--<View-->
            <!--android:id="@+id/div_tab_bar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2px"-->
            <!--android:layout_above="@id/rg_tab_bar"-->
            <!--android:background="@color/div_white" />-->

            <android.support.v4.view.ViewPager
                android:id="@+id/vpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/rg_tab_bar"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginTop="5dp"
                android:background="@color/white" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>