<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_divider_line"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="center_vertical"
        android:background="@color/blue_ice"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_radio_return"
            android:gravity="left|center_vertical"
            android:padding="@dimen/dp5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/news_list"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginTop="@dimen/dp10"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rg_tab_bar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/shape_circle_huise"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_pro1"
                style="@style/tab_menu_item1"
                android:text="@string/company_news" />

            <RadioButton
                android:id="@+id/rb_pro2"
                style="@style/tab_menu_item3"
                android:text="@string/industry_dynamics" />

        </RadioGroup>

        <android.support.v4.view.ViewPager
            android:id="@+id/newsPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rg_tab_bar"
            android:layout_marginBottom="@dimen/dp10"
            android:layout_marginTop="5dp"
            android:background="@color/white" />
    </LinearLayout>

</LinearLayout>