<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_product_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_product_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@mipmap/ic_launcher" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="T107高档触摸电子烟套装"
            android:maxLines="1"
            android:maxEms="20"
            android:ellipsize="end"
            android:textColor="@color/black_2"
            android:textSize="16dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/product_model"
                android:textColor="@color/black_3"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_product_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T107"
                android:textColor="@color/black_3"
                android:textSize="14dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_flavor"
                android:textColor="@color/black_3"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_product_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="14mm*154mm"
                android:textColor="@color/black_3"
                android:textSize="14dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_capacity"
                android:textColor="@color/black_3"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_product_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="650mAh"
                android:textColor="@color/black_3"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>